[manager]: фильтры для получения dicom и jobs
