# dicom-manager/internal/usecases/job/get_paginated/dto.go
@@ -8,15 +8,18 @@ import (
 
 // GetJobsRequest структура запроса для получения списка задач.
 type GetJobsRequest struct {
-	Offset         uint64
-	Limit          uint64
-	CreatorID      int64
-	OrganizationID int64
-	RequesterRole  model.UserRole
+	OrganizationIDs []int64
+	UploadSources   []string
+	Offset          uint64
+	Limit           uint64
+	CreatorID       int64
+	OrganizationID  int64
+	RequesterRole   model.UserRole
 }
 
 // Job структура для хранения информации о задаче.
 type Job struct {
+	UploadSource       string
 	ID                 string
 	DicomFileID        string
 	Status             string
